# spherical_bundle_adjuster

./: .gitignore  CMakeLists.txt  README.md  equi2cube.cpp  equi2cube.hpp  equi2cube_surf.cpp  equi2cube_surf.hpp  feature_matcher.cpp  feature_matcher.hpp  main.cpp  spherical_bundle_adjuster.cpp  spherical_bundle_adjuster.hpp  spherical_surf.cpp  spherical_surf.hpp
main/: main.cpp
test/: feature_test.cpp
